# acc

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements-dev.txt  ruff.toml
global-skills/: README.md
global-skills/ai-research-tutor/: SKILL.md
global-skills/python-best-practices/: SKILL.md
global-skills/testing-pytest/: SKILL.md
global-skills/twelve-factor-app/: SKILL.md
skills/: README.md
skills/acc-ai-analysis/: SKILL.md
skills/acc-architecture/: SKILL.md
skills/acc-fetcher/: SKILL.md
skills/acc-orchestrator/: SKILL.md
skills/database-postgres/: SKILL.md
skills/docker-containerization/: SKILL.md
skills/fastapi-backend/: SKILL.md
skills/llm-integration/: SKILL.md
skills/observability/: SKILL.md
skills/traefik-deployment/: SKILL.md
src/acc/: config.py  models.py
src/acc/api/: main.py  schemas.py
src/acc/api/routes/: compliance.py  health.py
src/acc/db/: __init__.py  models.py  session.py
src/acc/fetcher/: fetcher.py
src/acc/helpers/: __init__.py  html_qc.py  validators.py
src/acc/infra/: http_client.py  storage.py
tests/: validators_test.py
ui/: streamlit_app.py
