[project]
name = "automated-compliance-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "async-lru>=2.0.5",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.12",
    "filetype>=1.2.0",
    "httpx[http2]>=0.28.1",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.4.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.21.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.37.1",
    "tldextract>=5.3.0",
    "trafilatura>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.6",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
